--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ license = "MIT"
 [dependencies]
 atty = "0.2"
 chrono = "0.4"
+clap = { version = "4.5.39", features = ["derive"] }
 crossterm = "0.26"
 notify-rust = { version = "4", optional = true }
 
